--- a/slide/package.json
+++ b/slide/package.json
@@ -19,7 +19,8 @@
   },
   "scripts": {
     "start": "vite",
-    "build": "tsc --noEmit && vite build"
+    "build": "tsc --noEmit && vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
