--- a/sound/package.json
+++ b/sound/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "test": "TODO()"
   },
   "eslintConfig": {
