refactor directory structure

--- a/slide-api/package.json
+++ b/slide-api/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "slide-be",
-  "version": "0.0.0",
+  "name": "slide-api",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
