--- a/sound-api/package.json
+++ b/sound-api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "mediaserver": "^0.1.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19"
   }
 }
