--- a/sound-api/package.json
+++ b/sound-api/package.json
@@ -9,9 +9,17 @@
   },
   "author": "",
   "dependencies": {
+    "@prisma/client": "^4.7.1",
     "express": "^4.18.1",
     "mediaserver": "^0.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.17",
+    "prisma": "^4.7.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
