--- a/sound-api/package.json
+++ b/sound-api/package.json
@@ -2,9 +2,9 @@
   "name": "sound-api",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
