--- a/sound-api/package.json
+++ b/sound-api/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.17",
     "prisma": "^4.7.1",
     "ts-node": "^10.9.1",
