--- a/sound-slide-api/package.json
+++ b/sound-slide-api/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
+    "nodemon": "^2.0.20",
     "prisma": "^4.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
