--- a/slide-api/package.json
+++ b/slide-api/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "@prisma/client": "4.8.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.17",
     "nodemon": "^2.0.20",
     "prisma": "^4.8.0",
