--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-timer-hook": "^3.0.5",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
     "typescript": "4.9.3"
